# ec2-cli

./: .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/ask-colleague/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.devague/: current
.devague/frames/: ec2-cli-ships-a-cost-and-fleet-dashboard-one-comma.json
.devague/plans/: ec2-cli-ships-a-cost-and-fleet-dashboard-one-comma.json
.github/workflows/: publish.yml  tests.yml
docs/: skill-sources.md
docs/plans/: 2026-06-15-ec2-cli-ships-a-cost-and-fleet-dashboard-one-comma.md
docs/specs/: 2026-06-15-ec2-cli-ships-a-cost-and-fleet-dashboard-one-comma.md
ec2/: __init__.py  __main__.py  deletion.py  limits.py
ec2/aws/: __init__.py  client.py  cost.py  fleet.py  pricing.py
ec2/cli/: __init__.py  _errors.py  _output.py
ec2/cli/_commands/: cli.py  doctor.py  explain.py  instance.py  learn.py  monitor.py  overview.py  whoami.py
ec2/explain/: __init__.py  catalog.py
ec2/monitor/: __init__.py  alert.py  daemon.py  evaluate.py
tests/: test_aws_client.py  test_boundary.py  test_cli.py  test_cli_introspection.py  test_cost.py  test_e2e.py  test_fleet.py  test_instance.py  test_instance_delete.py  test_limits.py  test_monitor_alert.py  test_monitor_cli.py  test_monitor_evaluate.py  test_overview.py  test_pricing.py
